# user_links_api/apps/links/views/one_link_view.py
@@ -59,5 +59,6 @@ class LinkView(APIView):
             return Response({'Status':'Sent Invalid Data'},status=status)
         
         else:
+            collection.image.delete(save=True)
             collection.delete()
             return Response({'Status':"Deleted"})
